Fix subnav on mobile

--- a/assets/styles/company.css
+++ b/assets/styles/company.css
@@ -57,6 +57,10 @@
 
 @media all and (max-width: 920px) {
     
+    .company .subnav {
+        position: absolute;
+    }
+    
     .company {
         padding-left: 0;
         padding-right: 0;
