--- a/assets/styles/header-footer.css
+++ b/assets/styles/header-footer.css
@@ -151,9 +151,8 @@
 /* Subnav ---------------------------------------------------------------------------------- */
 
 .subnav {
-    position: relative;
-    text-align: center;
     position: absolute;
+    text-align: center;
     top: 0;
     left: 0;
     right: 0;
@@ -163,8 +162,9 @@
 }
 
 .subnav a {
+    display: inline-block;
     color: #8b8a8a;
-    margin: 0 0.5em;
+    margin: 0.5em;
 }
 
 .subnav a:hover {
@@ -261,7 +261,7 @@
 }
 
 @media all and (max-width: 920px) {
-
+    
     .footer-logo {
         display: block;
         position: relative;
@@ -290,6 +290,10 @@
 
 @media all and (max-width: 700px) {
     
+    .subnav {
+        position: relative;
+    }
+    
     section {
         padding: 20px;
     }
@@ -314,7 +318,7 @@
 /* Responsive Header ----------------------------------------- */
 
 @media all and (max-width: 1040px) { /* width needs to be manually adjusted if nav changes */
-
+    
     body > section:first-of-type {
         margin-top: 0px;
     }
